# teehr-hub

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.jupyter-driver  Dockerfile.spark-executor  README.md  build-and-push-executor.sh  config.json  create-ecr-secret-helper.sh  deploy-spark-k8s.sh  executor-pod-template.yaml  plan.md  project.garden.yml  pyproject.toml  requirements.txt  spark_session_utils.py  welcome-page-plan.md
api/: ANALYTICS_API_PLAN.md  Dockerfile  garden.yaml  pyproject.toml  requirements.txt
api/manifests/: api-rbac.yaml  configmap.yaml  configmap.yaml.tpl  deployment.yaml  deployment.yaml.tpl  service.yaml
api/scripts/: auth_smoke_test.sh
api/src/: api_key_store.py  auth.py  config.py  database.py  main.py  models.py  rate_limit.py  routes.py  routes_old.py
api/src/k8s/: __init__.py  jobs.py
api/src/models/: __init__.py  analytics.py
api/src/routes/: __init__.py  analytics.py  auth.py  crosswalks.py  locations.py  metrics.py  ogc_foundation.py  queryables.py  reference_data.py  timeseries.py  utils.py
autoscaler/: garden.yaml
cert-manager/: README.md  garden.yaml
cnpg-database/: garden.yaml
contour/: garden.yaml
docs/: ARCHITECTURE.md  access-control-matrix.md  iceberg-auth-storage-roadmap.md  infra-app-split-plan.md  keycloak-gmail-smtp.md  platform-app-deployment-contract.md
examples/: 01_setup_minio_warehouse.ipynb  02_create_joined_timeseries.ipynb  03_generate_basic_metrics.ipynb  BootstrapDropdownExample.jsx  BootstrapNativeDropdownExample.jsx  connect-to-trino.ipynb  forecast_dashboard_dev.ipynb  ingest_usgs_nwis.ipynb  ingest_usgs_nwm_data.ipynb  nwpsrfc_preproc.ipynb  setup_minio_warehouse.ipynb  simple_spark_helper.py  spark_data_example.ipynb  spark_session_aws_tests.ipynb  temp_make_plot.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  eslint.config.js  garden.yaml  index.html  nginx.conf  package-lock.json  package.json  vite.config.mjs
helm-chart/: config.yaml
iceberg-pg/: garden.yaml
iceberg-rest/: garden.yaml
ingress/: garden.yaml
jupyterhub/: config.yaml  garden.yaml
jupyterhub-profiles/: README.md  garden.yaml  generate_profile_configmap_templates.py  profile-list.remote.json  profile-list.remote.projects.json
keycloak/: garden.yaml
keycloak-bootstrap/: garden.yaml
keycloak-operator/: garden.yaml
keycloak-pg/: garden.yaml
keycloak-theme/: Dockerfile  garden.yaml
kind/: create_kind_cluster.sh
kubernetes/: jupyter-spark-rbac.yaml  spark-data-nfs.yaml  spark-roles.yaml
metrics-server/: garden.yaml
minio/: garden.yaml
monitoring/: garden.yaml
olm/: garden.yaml
panel-dashboards/: Dockerfile  README.md  garden.yaml  pyproject.toml
panel-dashboards/apps/: app.py  app2.py  data_summary_dashboard.ipynb  forecast_dashboard.ipynb  panel_dashboard.ipynb  simulation_dashboard.ipynb  utils.py
panel-dashboards/manifests/: panel-app.yaml  panel-app.yaml.tpl
prefect-pg/: garden.yaml
prefect-server/: garden.yaml
prefect-workflows/: Dockerfile.prefect-teehr  executor-pod-template.yaml  garden.yaml  prefect-local.yaml  prefect-remote.yaml  prefect.yaml  (+1 more)
spark-analytics-driver/: Dockerfile  garden.yaml  pyproject.toml
spark-analytics-driver/spark_analytics_driver/: __init__.py  __main__.py  analytics_registry.py  db.py
spark-analytics-driver/spark_analytics_driver/analytics/: __init__.py  base.py  custom_metrics.py
xpublish-api/: Dockerfile  garden.yaml  pyproject.toml
xpublish-api/manifests/: configmap-local.yaml.tpl  configmap-remote.yaml.tpl  deployment.yaml.tpl  service.yaml  serviceaccount.yaml.tpl
xpublish-api/src/: auth.py  config.py  main.py  provider.py
(+405 files in other folders)
