[project]
name = "teehr-hub-api"
version = "0.1.0"
description = "OGC-compliant API for TEEHR hydrological data"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "trino>=0.327.0",
    "sqlalchemy>=2.0.25",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.7",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.15",
    "shapely==2.0.2",
    "pyproj==3.6.1",
    "fiona>=1.9.6",
    "geopandas>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[tool.ruff]
# Same as Black
line-length = 88
indent-width = 4

# Target Python 3.11
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Query)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"
