[project]
name = "teehr-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "folium (>=0.20.0,<0.21.0)",
    "panel (>=1.8.2,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "geoviews (>=1.14.1,<2.0.0)",
    "bokeh (>=3.8.0,<4.0.0)",
    "holoviews (>=1.21.0,<2.0.0)",
    "trino (>=0.336.0,<0.337.0)",
    "hvplot (>=0.12.1,<0.13.0)",
    "jupyter-bokeh (>=4.0.5,<5.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "watchfiles (>=1.1.1,<2.0.0)",
    "teehr @ git+https://github.com/RTIInternational/teehr.git@v0.6-dev"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false