[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teehr-hub-xpublish-api"
version = "0.1.0"
description = "xpublish tile and EDR service for icechunk gridded data"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
    "xpublish",
    "xpublish-tiles",
    "xpublish-edr",
    "icechunk",
    "xarray",
    "zarr",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
